# graphics-stuff

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/: GSAssets.h.in
assets/shaders/compute-shader-study/: first.comp
assets/shaders/graverlet/: graverlet.comp  line.frag  main.vert  point.frag
assets/shaders/postprocess/: main.frag  main.vert  tunnel.frag
bitmaps/: README.md  color.h  colors.cpp  colors.ppm  context.h  lines.cpp  lines.ppm  mandelbrot.cpp
blend2d_example/: README.md  main.cpp
bundle/: CMakeLists.txt
cellular/: main.cpp
compiler-options-study/: VS_compiler_options.md  colorspace_program.cpp  cpp20.cpp  image_program.cpp  main.cpp  module1.cpp
dependencies/: CMakeLists.txt  README.md
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
gdi/: README.md  drawing_a_line.cpp
geoproc/: README.md  cube.cpp  dynmesh.cpp  omeshgenviz.cpp  raylib.cpp  split.cpp  split_original.off  split_splitted.off
graverlet/: CMakeLists.txt  main.cpp
misc/: README.md  colorpicker.cpp  factory_study.cpp  glfw_01.cpp  glfw_02.cpp  glfw_03.cpp  glfw_04.cpp  glfw_05.cpp  glm_test.cpp  icosahedron.cpp  icosphere.cpp  imgui_test.cpp  myimconfig.h  skeleton.cpp
processing++/: README.md  build_sketch.bat  main.cpp  processing.cpp  processing.h  sketch1.cpp
processing++/references/: beginShape_01.cpp  beginShape_02.cpp  beginShape_03.cpp  beginShape_04.cpp  beginShape_05.cpp  beginShape_06.cpp  beginShape_07.cpp  beginShape_08.cpp  beginShape_09.cpp  beginShape_10.cpp  beginShape_11.cpp  circle.cpp  colorMode_01.cpp  colorMode_02.cpp  colorMode_03.cpp  color_01.cpp  color_02.cpp  color_03.cpp  ellipse.cpp  ellipseMode_01.cpp  ellipseMode_02.cpp  endShape.cpp  point_01.cpp  rectMode_01.cpp  rectMode_02.cpp  rect_01.cpp  rect_02.cpp  square.cpp  strokeCap.cpp  strokeJoin_01.cpp  strokeJoin_02.cpp  strokeJoin_03.cpp  strokeWeight.cpp
resource-abstraction-study/: ResourceHandler.cpp  ResourceHandler.h  TestResourceHandler.cpp  TestWrapper01.cpp  TestWrapper02.cpp  TestWrapper03.cpp  TestWrapper04.cpp  Wrapper.cpp  Wrapper.h  Wrapper01.cpp  Wrapper01.h  Wrapper02.cpp  Wrapper02.h  Wrapper03.cpp  Wrapper03.h  Wrapper04.cpp  Wrapper04.h  blog_post.md  build.bat  factory_study.cpp  macros.h
shader-study/: CMakeLists.txt  ShaderStudyAssets.h.in  main.cpp
studies/: iterate_child_class.cpp
vscode/: README.md  c_cpp_properties.json  launch.json  tasks.json
workshop/: App.cpp  App.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  Common.h  Framebuffer.cpp  Framebuffer.h  Mesh.cpp  Mesh.h  OMesh.cpp  OMesh.h  README.md  Shader.cpp  Shader.h  Texture.cpp  Texture.h  main.cpp
workshop-apps/boilerplate/: CMakeLists.txt  main.cpp
workshop-apps/cellular/: CMakeLists.txt  Cell.h  main.cpp
workshop-apps/collision-verlet/: CMakeLists.txt  main.cpp
workshop-apps/compute-shader-study/: CMakeLists.txt  main.cpp
workshop-apps/dos-effects/: CMakeLists.txt  main.cpp
workshop-apps/graverlet/: CMakeLists.txt  Verlet.h  main.cpp  plots.h
workshop-apps/graverlet-gpu/: CMakeLists.txt  main.cpp
workshop-apps/post-process/: CMakeLists.txt  main.cpp
workshop-apps/shader-study/: main.cpp  mainFragment.glsl  mainVertex.glsl
workshop/cellular/: Cell.cpp  Cell.h  main.cpp
